Add tabindexes to toolbar elements and make sure a logical tab order is maintained
This fixes the following issues:
* Make sure toolbar elements are tabbed in the correct order
* Make sure main navigation is tabbed to once the user clicks the mobile menu button

Required to maintain compliance with WCAG 2.4.3 Focus Order: (Level A).

--- a/views/lexicon/includes/notifications.html.twig
+++ b/views/lexicon/includes/notifications.html.twig
@@ -1,6 +1,7 @@
     <div class="dropdown notifications">
         {{
             html.link({
+                'tabindex': '6',
                 'class': 'notifications-toggle is-active',
                 'href': '#',
                 'label': html.icon('bell-o', { 'label': 'Show notifications' }),
