--- a/stylesheets/pulsar.scss
+++ b/stylesheets/pulsar.scss
@@ -41,6 +41,7 @@ $fa-css-prefix: 'icon';
 @import 'mixin.media-queries';
 @import 'mixin.mixins-to-organise';
 @import 'mixin.responsive-utilities';
+@import 'mixin.word-wrap';
 
 // Config
 @import 'config.variables';
