--- a/views/pulsar/layouts/base.html.twig
+++ b/views/pulsar/layouts/base.html.twig
@@ -80,7 +80,7 @@
     {% block pageStyle %}{% endblock %}
 </head>
 <body class="language-html theme-slate">
-<a class="skip-link" href="#skip-target">Skip to main content</a>
+<a class="skip-link" href="#skip-target" tabindex="1">Skip to main content</a>
 
 {% block body %}
     <div role="main" class="container" id="top">
