Make sure href is not added to button elements in primary nav

--- a/views/pulsar/v2/helpers/nav.html.twig
+++ b/views/pulsar/v2/helpers/nav.html.twig
@@ -115,6 +115,7 @@
     {% set tag = 'a' %}
     {% if options.href is defined and options.href|slice(0,1) == '#' %}
         {% set tag = 'button' %}
+        {% set options = options|merge({ 'href': null }) %}
     {% endif %}
 
     <li
