--- a/stylesheets/_component.navigation.scss
+++ b/stylesheets/_component.navigation.scss
@@ -463,6 +463,8 @@
 
 .nav-close,
 .nav-close-ltr {
+    background: none;
+    border: 0;
     color: color(white);
     display: none;
     padding: 0 20px 23px;
