Remove unwanted nav_item option

--- a/views/pulsar/v2/helpers/nav.html.twig
+++ b/views/pulsar/v2/helpers/nav.html.twig
@@ -107,7 +107,7 @@
 {% endmacro %}
 
 
-{% macro nav_item(options, heading_id, aria_controls, aria_label) %}
+{% macro nav_item(options, heading_id, aria_controls) %}
 {% spaceless %}
     {% import '@pulsar/pulsar/v2/helpers/html.html.twig' as html %}
     {% import '@pulsar/pulsar/v2/helpers/util.html.twig' as util %}
