Remove default option for datepickerStyle from example

--- a/views/lexicon/forms/date.html.twig
+++ b/views/lexicon/forms/date.html.twig
@@ -9,8 +9,7 @@
     {{
         form.date({
             'id': 'date-1',
-            'label': 'Date field',
-            'data-datepickerStyle': 'US'
+            'label': 'Date field'
         })
     }}
 
