--- a/views/pulsar/v2/helpers/form.html.twig
+++ b/views/pulsar/v2/helpers/form.html.twig
@@ -869,7 +869,8 @@ data-*      | string | Data attributes, eg: `'data-foo': 'bar'`
     {%
         set options = options|default({})|merge({
             'placeholder': options.placeholder|default('dd/mm/yyyy'),
-            'data-datepicker': 'true'
+            'data-datepicker': 'true',
+            'data-datepickerStyle': options['data-datepickerStyle']|default('default')
         })
     %}
 
