Add non pikaday date input field example

--- a/views/lexicon/forms/date.html.twig
+++ b/views/lexicon/forms/date.html.twig
@@ -8,6 +8,14 @@
 
     {{
         form.date({
+            'data-datepicker': 'false',
+            'id': 'date-noDayPicker',
+            'label': 'Date field without Day Picker'
+        })
+    }}
+
+    {{
+        form.date({
             'id': 'date-1',
             'label': 'Date field'
         })
