--- a/views/pulsar/v2/helpers/form.html.twig
+++ b/views/pulsar/v2/helpers/form.html.twig
@@ -870,7 +870,7 @@ data-*      | string | Data attributes, eg: `'data-foo': 'bar'`
         set options = options|default({})|merge({
             'placeholder': options.placeholder|default('dd/mm/yyyy'),
             'data-datepicker': options['data-datepicker']|default('true'),
-            'data-datepickerStyle': options['data-datepickerStyle']|default('default')
+            'data-dateformat': options['data-dateformat']|default('default')
         })
     %}
 
