--- a/views/lexicon/forms/date.html.twig
+++ b/views/lexicon/forms/date.html.twig
@@ -23,7 +23,7 @@
 
     {{
         form.date({
-            'data-dateformat': 'US',
+            'data-format': 'US',
             'id': 'date-US',
             'label': 'Date US style',
             'placeholder': 'mm/dd/yyyy'
@@ -32,7 +32,7 @@
 
     {{
         form.date({
-            'data-dateformat': 'reverse',
+            'data-format': 'reverse',
             'id': 'date-reverse',
             'label': 'Date reverse style',
             'placeholder': 'yyyy/mm/dd'
