--- a/views/pulsar/v2/helpers/form.html.twig
+++ b/views/pulsar/v2/helpers/form.html.twig
@@ -827,6 +827,7 @@ Generates a text input field which will show a date picker when focused.
 ```twig
 {{
     form.date({
+        'format': 'US',
         'label': 'When is your birthday?'
     })
 }}
@@ -852,6 +853,7 @@ Option      | Type   | Description
 autofocus   | bool   | Whether the field should have input focus on page load
 disabled    | bool   | Stops the element from being interactive if true
 form        | string | Specific one or more forms this label belongs to
+format      | string | Options for this can be `default`, `US` or `reverse`
 id          | string | A unique identifier, will also be used as the label's `for` attribute
 name        | string | The name of this control
 placeholder | string | A short hint that describes the expected value
@@ -870,7 +872,7 @@ data-*      | string | Data attributes, eg: `'data-foo': 'bar'`
         set options = options|default({})|merge({
             'placeholder': options.placeholder|default('dd/mm/yyyy'),
             'data-datepicker': options['data-datepicker']|default('true'),
-            'data-dateformat': options['data-dateformat']|default('default')
+            'data-format': options.format|default('default')
         })
     %}
 
