Correct Date Example Wording

--- a/views/lexicon/forms/date.html.twig
+++ b/views/lexicon/forms/date.html.twig
@@ -10,7 +10,7 @@
         form.date({
             'data-datepicker': 'false',
             'id': 'date-noDayPicker',
-            'label': 'Date field without Day Picker'
+            'label': 'Date field without date picker'
         })
     }}
 
