Remove invalid rel attribute from required tooltips

--- a/views/pulsar/v2/helpers/util.html.twig
+++ b/views/pulsar/v2/helpers/util.html.twig
@@ -154,7 +154,7 @@
 {% macro required(required) %}
 {% spaceless %}
     {% if required %}
-        &nbsp;<span class="required-indicator" rel="tooltip" data-toggle="tooltips" title="required">*</span>
+        &nbsp;<span class="required-indicator" data-toggle="tooltips" title="required">*</span>
     {% endif  %}
 {% endspaceless %}
 {% endmacro %}
