Stop guidance popovers requiring clickover dependency
Also fixes issue where clicking on the guidance icon would trigger the focus (and selection of) checkboxes and radios

--- a/views/pulsar/v2/helpers/util.html.twig
+++ b/views/pulsar/v2/helpers/util.html.twig
@@ -85,7 +85,8 @@
             'data-container': options['guidance-container']|default('body'),
             'data-content': value,
             'data-placement': 'top',
-            'rel': 'clickover',
+            'data-toggle': 'popover',
+            'data-autoclose': 'true'
         })
     }}
     {% endif %}
