--- a/views/pulsar/v2/helpers/html.html.twig
+++ b/views/pulsar/v2/helpers/html.html.twig
@@ -1506,7 +1506,8 @@ data-dropzone-file-node-type        | boolean   | Show file type in file html | 
             <p class="dropzone__info">{{ idle|raw }}</p>
 
             <p class="dropzone__help"
-               rel="clickover"
+               data-toggle="popover"
+               data-autoclose="true"
                data-title="{{ options.helperTitle|default('Helper title')|raw }}"
                data-content="{{ options.helperContent|default('Helper content')|raw }}"
                data-html="true"
