--- a/stylesheets/_component.modals.scss
+++ b/stylesheets/_component.modals.scss
@@ -122,16 +122,10 @@
 // Footer (for actions)
 .modal__footer {
     @include clear-fix; // clear it in case folks use .pull-* classes on buttons
+    border-top: 1px solid $modal-footer-border-color;
     clear: both;
     padding: ($modal-inner-padding - 1) $modal-inner-padding ($modal-inner-padding - 5);
-    // text-align: right; // right align buttons
-    border-top: 1px solid $modal-footer-border-color;
 
-/*   // Properly space out buttons
-  .btn + .btn {
-    margin-left: 5px;
-    margin-bottom: 0; // account for input[type="submit"] which gets the bottom margin like all other inputs
-  } */
     // but override that for button groups
     .btn-group .btn + .btn {
         margin-left: -1px;
@@ -339,6 +333,6 @@
 
 .modal__ribbon {
     background-color: color(gray, off-white);
-    border-bottom: 1px solid #e5e5e5;
+    border-bottom: 1px solid color(border);
     padding: $line-height-base 20px;
 }
