--- a/stylesheets/_component.tables.scss
+++ b/stylesheets/_component.tables.scss
@@ -158,7 +158,7 @@
 }
 
 .table-action {
-    border-bottom: none !important;
+    border-bottom: 0;
     border-right: 1px dotted color(border);
     display: inline-block;
     margin-right: 5px;
