--- a/stylesheets/_component.rules.scss
+++ b/stylesheets/_component.rules.scss
@@ -298,3 +298,211 @@ td.table__form .rules + .form__group:last-of-type {
         width: auto;
     }
 }
+
+/**
+ * The following version 2 was developed to meet the needs of XFP conditional logic rules
+ */
+.rules-container--v2 {
+
+    .rule-links a {
+        padding: 5px 0;
+    }
+
+    .rule-link {
+        position: relative;
+
+        &::after {
+            color: #dedede;
+            content: '\f061';
+            font-family: 'FontAwesome';
+            font-size: 19px;
+            left: 0;
+            position: absolute;
+            top: 7px;
+        }
+    }
+
+    .rule-link--or {
+        border-left: 4px solid color(gray, lightest);
+        padding-left: 30px;
+
+        &::before {
+            content: '';
+            display: inline-block;
+            border-left: 4px solid color(gray, lightest);
+            margin-right: -5px;
+            height: 21px;
+            width: 0;
+        }
+
+        &::after {
+            left: 35px;
+        }
+
+        a {
+            display: inline-block;
+
+            &::before {
+                background-color: color(gray, lightest);
+                content: '';
+                display: inline-block;
+                height: 4px;
+                margin-right: 10px;
+                width: 10px;
+            }
+        }
+    }
+
+    .rule-link--and {
+        border-left: 4px solid color(gray, lightest);
+
+        a {
+            display: inline-block;
+
+            &::before {
+                background-color: color(gray, lightest);
+                content: '';
+                display: inline-block;
+                height: 4px;
+                margin-right: 10px;
+                width: 10px;
+            }
+        }
+    }
+
+    .rule-link--else-if {
+        border-left: 4px solid color(gray, lightest);
+        margin-left: 20px;
+
+        a {
+            display: inline-block;
+
+            &::before {
+                background-color: color(gray, lightest);
+                content: '';
+                display: inline-block;
+                height: 4px;
+                margin-right: 10px;
+                width: 10px;
+            }
+        }
+    }
+
+    .rule-block + .rule-block,
+    .rule-block--indent > .rule-block {
+        margin-top: -1px;
+    }
+
+    // first block, indented one spot
+    .rule-block + .rule-block--return,
+    .rule-block--if + .rule-block--or {
+        margin-left: 40px;
+        width: calc(100% - 40px);
+    }
+
+    .rule-block--indent > .rule-links,
+    .rule-block--indent > .rule-block--indent + .rule-links {
+        padding-left: 20px;
+    }
+
+    .rule-block--indent {
+        border-left: 4px solid color(gray, lightest);
+        margin-left: 20px;
+        padding-left: 20px;
+    }
+
+    .rule-block__header {
+        box-shadow: none;
+        font-family: $font-family-regular;
+    }
+
+    .rule-block--if,
+    .rule-block--else-if {
+        border-left: 4px solid color(jadu-blue, dark);
+        color: color(jadu-blue, dark);
+    }
+
+    .rule-block--and {
+        border-left: 4px solid color(jadu-green, dark);
+        color: color(jadu-green, dark);
+        margin-top: 0;
+
+        + .rule-block--or + .rule-link--or {
+            padding-left: 40px;
+        }
+    }
+
+    .rule-block--or {
+        border-left: 4px solid color(jadu-pink, dark);
+        color: color(jadu-pink, dark);
+    }
+
+    .rule-block--else {
+        border-left: 4px solid color(jadu-teal, dark);
+        color: color(jadu-teal, dark);
+
+        + .rule-block--return {
+            margin-left: 30px;
+            width: calc(100% - 30px);
+
+            &::before {
+                display: none;
+            }
+        }
+    }
+
+    .rule-block--return .rule-block__header {
+        background-color: color(jadu-green, pale);
+    }
+
+    .rule-block--else-return .rule-block__header {
+        background-color: color(gray, dark);
+        color: color(white);
+
+        @include respond-min($screen-small) {
+            width: 120px;
+        }
+    }
+
+    .rule-block--return,
+    .rule-block--else-return {
+        border-radius: 15px;
+
+        @include respond-min($screen-small) {
+            border-left: 0;
+        }
+
+        .rule-block__header {
+            border-radius: 15px;
+            border-bottom-left-radius: 0;
+            border-bottom-right-radius: 0;
+
+            @include respond-min($screen-small) {
+                border-radius: 15px;
+                border-top-right-radius: 0;
+                border-bottom-right-radius: 0;
+            }
+        }
+    }
+
+    .rule-block + .rule-block--return,
+    .rule-block + .rule-block--else-return {
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
+
+        .rule-block__header {
+            border-top-left-radius: 0;
+        }
+    }
+
+    .rule-block__controls {
+        margin-top: .8em;
+    }
+
+    .remove__control {
+        color: color(text);
+        position: absolute;
+        right: 10px;
+        top: 10px;
+    }
+}
