--- a/views/pulsar/v2/forms.html.twig
+++ b/views/pulsar/v2/forms.html.twig
@@ -2,7 +2,29 @@
 
 {% block form_widget_simple %}
     {% set attr = attr|merge({'class': (attr.class|default('') ~ ' form__control')|trim}) %}
-    {{ parent() }}
+
+    {% if attr['data-datepicker'] is defined %}
+        {% set appendIcon = 'icon-calendar' %}
+    {% endif %}
+
+    {% if attr.class is defined and 'colorpicker' in attr.class %}
+        <div class="input-group">
+            <span class="input-group-addon">#</span>
+            {{ parent() }}
+        </div>
+    {% elseif (prependIcon is defined and prependIcon is not empty) or (appendIcon is defined and appendIcon is not empty) %}
+        <div class="input-group">
+            {% if prependIcon is defined and prependIcon is not empty %}
+                <div class="input-group-addon"><i class="{{ prependIcon }} icon-fw"></i></div>
+            {% endif %}
+            {{ parent() }}
+            {% if appendIcon is defined and appendIcon is not empty %}
+                <div class="input-group-addon"><i class="{{ appendIcon }} icon-fw"></i></div>
+            {% endif %}
+        </div>
+    {% else %}
+        {{ parent() }}
+    {% endif %}
 {% endblock form_widget_simple %}
 
 {# Remove the surrounding div #}
@@ -105,22 +127,7 @@
                     {% set attr = attr|merge({'class': (inputClass ~ ' form__control')|trim}) %}
                 {% endif %}
 
-                {# If colour picker #}
-                {% if attr.class is defined and 'colorpicker' in attr.class %}
-                    <div class="input-group">
-                        <span class="input-group-addon">#</span>
-                        {{ form_widget(form, {'attr': attr}) }}
-                    </div>
-                {% elseif prependIcon is defined and prependIcon is not empty %}
-                    {# If prepended icon #}
-                    <div class="input-group">
-                        <div class="input-group-addon"><i class="{{ prependIcon }} icon-fw"></i></div>
-                        {{ form_widget(form, {'attr': attr}) }}
-                    </div>
-                {% else %}
-                    {# If standard input #}
-                    {{ form_widget(form, {'attr': attr}) }}
-                {% endif %}
+                {{ form_widget(form) }}
 
                 {# Extra label if field is toggle switch #}
                 {% if inputClass is defined and 'toggle-switch' in inputClass %}
