--- a/stylesheets/_component.buttons.scss
+++ b/stylesheets/_component.buttons.scss
@@ -69,6 +69,10 @@ $btn-white:                 'white';
       border: 0;
       padding: 0;
     }
+
+    &:focus {
+        outline: 3px solid color(border, focus);
+    }
 }
 
 /**
