--- a/stylesheets/_component.progress-lists.scss
+++ b/stylesheets/_component.progress-lists.scss
@@ -99,11 +99,16 @@
             }
         }
     }
+
+    &:focus .progress-list__label {
+        outline: 3px solid color(border, focus);
+    }
 }
 
 .progress-list__label {
     @include word-break-all;
 
+    color: color(black);
     display: inline-block;
     position: relative;
     text-align: left;
@@ -134,6 +139,10 @@
 
     .badge {
         color: color(white) !important;
+    }
+
+    .progress-list__label {
+        color: color(success, alt);
     }
 
     &:not(:last-child)::after {
@@ -170,6 +179,10 @@
 
     .badge {
         color: color(white) !important;
+    }
+
+    .progress-list__label {
+        color: color(primary, alt);
     }
 
     &:not(:last-child)::after {
