--- a/stylesheets/_component.search.scss
+++ b/stylesheets/_component.search.scss
@@ -38,6 +38,10 @@ input.main-search__field {
     &::-webkit-input-placeholder {
         color: #555;
     }
+
+    &:focus {
+        outline: 3px solid color(border, focus);
+    }
 }
 
 input.main-search__field::-ms-clear {
@@ -57,6 +61,10 @@ input.main-search__field::-ms-clear {
     @include respond-min($screen-tablet) {
         left: 155px;
         right: auto;
+    }
+
+    &:focus {
+        outline: 3px solid color(border, focus);
     }
 }
 
