--- a/stylesheets/_component.search.scss
+++ b/stylesheets/_component.search.scss
@@ -41,6 +41,7 @@ input.main-search__field {
 
     &:focus {
         outline: 3px solid color(border, focus);
+        outline-offset: 3px;
     }
 }
 
