--- a/stylesheets/_component.buttons.scss
+++ b/stylesheets/_component.buttons.scss
@@ -87,7 +87,31 @@ $btn-white:                 'white';
     &.is-hovered {
       box-shadow: 0 1px 0 $shadow-color;
       color: color($state, alt) !important;  // should be immutable
-      top: 1px;
+      transform: translateY(1px);
+      //top: 1px;
+
+        @include ie-lte(8) {
+        /* IE8+ - must be on one line, unfortunately */
+        -ms-filter: "progid:DXImageTransform.Microsoft.Matrix(M11=1, M12=0, M21=0, M22=1, SizingMethod='auto expand')";
+
+        /* IE6 and 7 */
+        filter: progid:DXImageTransform.Microsoft.Matrix(
+            M11=1,
+            M12=0,
+            M21=0,
+            M22=1,
+            SizingMethod='auto expand');
+
+
+        /*
+        * To make the transform-origin be the middle of
+        * the object.    Note: These numbers
+        * are approximations.  For more accurate results,
+        * use Internet Explorer with this tool.
+        */
+        margin-left: -3px;
+        margin-top: -2px;
+        }
     }
 
     &:active,
