--- a/stylesheets/_component.buttons.scss
+++ b/stylesheets/_component.buttons.scss
@@ -85,10 +85,12 @@ $btn-white:                 'white';
 
     &:hover,
     &.is-hovered {
-      box-shadow: 0 1px 0 $shadow-color;
-      color: color($state, alt) !important;  // should be immutable
-      transform: translateY(1px);
-      //top: 1px;
+        box-shadow: 0 1px 0 $shadow-color;
+        color: color($state, alt) !important;  // should be immutable
+        -moz-transform: translateY(1px);
+        -o-transform: translateY(1px);
+        -webkit-transform: translateY(1px);
+        transform: translateY(1px);
 
         @include ie-lte(8) {
         /* IE8+ - must be on one line, unfortunately */
