--- a/stylesheets/_component.button-groups.scss
+++ b/stylesheets/_component.button-groups.scss
@@ -31,6 +31,11 @@
         border-right: 1px solid #ccc;
     }
 
+    .form__control:focus + .control__label {
+        outline: 3px solid #ffbf47;
+        outline-offset: 2px;
+    }
+
     @each $state, $state-color, $state-color-alt in $state-colors {
         > .btn--#{$state}:not(:first-of-type):not(.btn--naked):not(.edit-button):not(.remove-button) {
             border-left-color: darken(color($state), 10);
