--- a/stylesheets/_component.flash.scss
+++ b/stylesheets/_component.flash.scss
@@ -40,6 +40,10 @@
     a {
         color: inherit;
         text-decoration: underline;
+
+        &:focus {
+            color: color(white);
+        }
     }
 }
 
