--- a/stylesheets/_component.buttons.scss
+++ b/stylesheets/_component.buttons.scss
@@ -260,7 +260,7 @@ $btn-white:                 'white';
 .btn--naked,
 .btn--naked > .btn {
     background: none;
-    border: 0;
+    border: 0 !important;
     box-shadow: none;
     color: color(text) !important;
 
