--- a/stylesheets/_utility.utilities.scss
+++ b/stylesheets/_utility.utilities.scss
@@ -257,6 +257,36 @@ div.no-results {
     float: right !important;
 }
 
+%u-clear-left,
+.u-clear-left {
+    clear: left !important;
+}
+
+%u-clear-right,
+.u-clear-right {
+    clear: right !important;
+}
+
+%u-clear-both,
+.u-clear-both {
+    clear: both !important;
+}
+
+%u-clear-initial,
+.u-clear-initial {
+    clear: initial !important;
+}
+
+%u-clear-inherit,
+.u-clear-inherit {
+    clear: inherit !important;
+}
+
+%u-clear-none,
+.u-clear-none {
+    clear: none !important;
+}
+
 %u-vertical-align-top,
 .u-vertical-align-top {
     vertical-align: top !important;
